--- a/_posts/2024-12-17-Linux.md
+++ b/_posts/2024-12-17-Linux.md
@@ -21,11 +21,25 @@ After that, extract the image to write into micro SDcard.
 unxz bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img.xz
 ```
 Write that extracted file into micro SDcard
-```
+```shell
 sudo mkdir /media/usb
 sudo dd if=/bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img of=/dev/sdb
 sync
 ```
 Hola, it's almost done. Now you can insert that sdcard into your board then insert the USB cable to power your board via computer. 
-> When booting, you have to press and hold the boot button(S2) before you power the board then release the S2 button after 2 to 5 seconds. For further informations, you should take a look at this docs
+> When booting, you have to press and hold the boot button(S2) before you power the board then release the S2 button after 2 to 5 seconds. For further informations, you should take a look at this docs.  
+> url: https://software-dl.ti.com/processor-sdk-linux/esd/docs/latest/linux/How_to_Guides/Target/How_to_Program_Beaglebone_Black_eMMC_via_SD_Card.html
 {: .prompt-warning }
+
+Now, we will set up the Host machine in order to cross-compile the BBB
+First, let's install the packages that need to build Linux kernel.
+```
+sudo apt-get install build-essential gcc-arm-linux-gnueabi git lzop u-boot-tools bison flex libssl-dev libncurses-dev sshfs lzma gettext libmpc-dev libncurses5-dev:amd64
+```
+
+then create a new directory called BBB
+```shell
+mkdir ~/BBB
+cd ~/BBB
+```
+then clone the Linux kernel from Github and checkout to the kernel that BBB using. In this post, im going to build target the linux version 4.10
