--- a/_posts/2024-12-17-Linux-BBB.md
+++ b/_posts/2024-12-17-Linux-BBB.md
@@ -10,7 +10,7 @@ Description: How to get started with BBB and load image into board, set up cross
 
 
 ---
-Firstly, most BBB have a built in 4GB SD card known as a eMMC. When the boards are made the eMMC is “flashed” with some version of the BeagleBone OS that is usually outdated. So the blog mainly guide about how to burn image via your external micro SDcard (with 4GB minium).
+Firstly, most BBB have a built-in 4GB SD card known as a eMMC. When the boards are made, the eMMC is “flashed” with some version of the BeagleBone OS that is usually outdated. So the blog mainly guide about how to burn image via your external micro SDcard (with 4GB minium).
 
 From your linux machine, install pre-built image for BBB version 4.14.108
 ``` 
@@ -42,4 +42,33 @@ then create a new directory called BBB
 mkdir ~/BBB
 cd ~/BBB
 ```
-then clone the Linux kernel from Github and checkout to the kernel that BBB using. In this post, im going to build target the linux version 4.10
+then clone the Linux kernel from Github and checkout to the kernel that BBB using.   
+In this post, im going to build target the linux version 4.14.108
+```shell
+git clone git://github.com/beagleboard/linux.git
+cd linux/
+git checkout 4.14.108-ti-r131
+```
+> U need to match the kernel version of host machine and target machine(BBB) to cross-compile
+{: .prompt-warning }
+Use default configuration
+```
+make -j4 ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- bb.org_defconfig
+```
+Run the menuconfig, here you can disable or enable any components you want!!!
+```
+make -j4 ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- menuconfig
+```
+Now, you need to build the linux kernel using this command. This may take about an hour. Relax :D 
+```
+make -j4 ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- LOADADDR=0x80000000 uImage dtbs
+```
+After that, build the modules. It took abt 40mins
+```
+make -j4 ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- modules
+```
+Create a new temporary directory that resides linux kernel directory. Install modules into that directory.
+```shell
+mkdir ../tmp/
+make -j4 ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- INSTALL_MOD_STRIP=1 INSTALL_MOD_PATH=../tmp modules_install
+```
