--- a/_posts/2024-12-17-Linux-BBB.md
+++ b/_posts/2024-12-17-Linux-BBB.md
@@ -1,5 +1,5 @@
 ---
-title: Getting started with BBB
+title: Getting started with Black Beagle Bone
 date: 2024-12-16 14:30:00 +0700;
 #categories: [Abt-me, introduce]
 tags: [linux, BBB]     # TAG names should always be lowercase
