--- a/_posts/2024-12-17-Hallo.md
+++ b/_posts/2024-12-17-Hallo.md
@@ -6,6 +6,6 @@ tags: [sharing]     # TAG names should always be lowercase
 ---
 
 ---
-description: first blog to be written.
+Description: first blog to be written.
 
 
