--- a/_posts/2024-12-17-Hallo.md
+++ b/_posts/2024-12-17-Hallo.md
@@ -2,10 +2,10 @@
 title: Hallo
 date: 2024-12-15 10:30:00 +0700;
 #categories: [Abt-me, introduce]
-tags: [sharing]     # TAG names should always be lowercase
+tags: [sharing]     
 ---
 
 ---
-Description: first blog to be written.
+no comm :D 
 
 
