--- a/_posts/2024-12-22-Terminal.md
+++ b/_posts/2024-12-22-Terminal.md
@@ -2,7 +2,7 @@
 title: Linux terminal emulator
 date: 2024-12-22 8:30:00 +0700;
 #categories: [Abt-me, introduce]
-tags: [linux]     # TAG names should always be lowercase
+tags: [linux]     
 ---
 
 ---
