_add post1 Pico

--- a/_posts/2024-12-28-MCU-Pico.md
+++ b/_posts/2024-12-28-MCU-Pico.md
@@ -2,7 +2,7 @@
 title: Raspberry Pi Pico 
 date: 2024-12-29 8:30:00 +0700;
 #categories: [Abt-me, introduce]
-tags: [mcu]     # TAG names should always be lowercase
+tags: [mcu]    
 ---
 
 ---
