_done post1 MCU

--- a/_posts/2024-12-29-MCU-Pico1.md
+++ b/_posts/2024-12-29-MCU-Pico1.md
@@ -56,11 +56,79 @@ int main()
 }
 ```
 <h3><strong>Read Input State</strong></h3>
-This is how perform a digital input pin.
+This is how perform a digital input pin. It will control the output of Pin 5 via the state reading from Pin 6
 ```shell
 int main(){
     gpio_init(5);
     gpio_set_dir(5, GPIO_OUT);
+    gpio_init(6);
+    gpio_set_dir(6, GPIO_IN);
+    while (1)
+    {
+        while(gpio_get(6))
+        {
+           gpio_put(5, 1);
+        }
+        gpio_put(5, 0);
+    }
 }
 ```
+<h3><strong>LED and Button example</strong></h3>
+<h4><strong>Step #1</strong></h4>
+```shell
+mkdir LED_BUTTON
+cd LED_BUTTON
+vi main.c
+```
+then copy that source code into main.c
+```
+#include "pico/stdlib.h"
+#include "
+#define BUILTIN_LED PICO_DEFAULT_LED_PIN
+#define BTN_PIN 21
+int main()
+{
+    gpio_init(BUILTIN_LED);
+    gpio_set_dir(BUILTIN_LED, GPIO_OUT);
+    gpio_init(BTN_PIN);
+    gpio_set_dir(BTN_PIN, GPIO_IN);
+    while (1)
+    {
+        while(gpio_get(BTN_PIN))
+        {
+           gpio_put(BUILTIN_LED, 1);
+        }
+        gpio_put(BUILTIN_LED, 0);
+    }
+}
+```
+<h4><strong>Step #2</strong></h4>
+Create a CMakeLists.txt file to the project's folder.
+```
+vi CMakeLists.txt
+```
+then copy that code into it.
+```
+cmake_minimum_required(VERSION 3.13)
 
+include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
+
+project(main C CXX ASM)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
+pico_sdk_init()
+
+add_executable(${PROJECT_NAME} main.c)
+
+pico_add_extra_outputs(${PROJECT_NAME})
+
+target_link_libraries(${PROJECT_NAME} pico_stdlib)
+
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
+```
+After that, you can do the same as the first blog abt Pico i've post. It's all done.  
+<h3><strong>Simulation with Wokwi</strong></h3>
+If you dont have hardware kit, you can simulate the result with Wokwi projects. Which is very helpful when you're just getting started. In another post, i'll show you guys how to use it in details :>
