--- a/_posts/2024-12-17-Hallo.md
+++ b/_posts/2024-12-17-Hallo.md
@@ -6,6 +6,14 @@ tags: [sharing]
 ---
 
 ---
-no comm :D 
+Total blog views: {{ site.posts | size }}    
 
+<ul class="tag-list">
+  {% assign tags = site.tags %}
+  {% for tag in tags %}
+    <li>
+      Tags {{ tag[0] }}: {{ tag[1].size }} total reads.
+    </li>
+  {% endfor %}
+</ul>
 
