--- a/_posts/2024-12-28-MCU-Pico.md
+++ b/_posts/2024-12-28-MCU-Pico.md
@@ -9,6 +9,14 @@ tags: [mcu]
 The aim of this series is to provide easy knowledge that anyone can dive into. In this series, i will give examples in programming Pico MCU in C/C++ lang. This post helps you to set up the SDK toolchain to use VScode for C/C++ development.  
 ![Desktop View](/assets/img/2024-12-28-MCU-Pico/pico.jpg){: .center }
 
+<h3><strong>Raspberry Pi Pico</strong></h3>
+Raspberry Pi Pico is a low-cost, high-performance microcontroller board with flexible digital interfaces. Some keys features include:
+- RP2040 microcontroller chip designed by Raspberry Pi in the UK
+- Dual-core Arm Cortex M0+ processor, flexible clock running up to 133Mhz
+- 264KB of SRAM, and 2MB of on-board flash memory
+- USB 1.1 with device and host support
+- Accelerated floating-point libraries on-chip
+- Drag-and-drop programming using mass storage over USB
 <h3><strong>C/C++ SDK programming</strong></h3>
 The SDk is the most conservative way of programming the RP2040-based microcontrollers. Embedded-C prog gives you highest level of control over your embedded software behavior and performance. 
 <h3><strong>RP2040 Hardware Architecture</strong></h3>
