--- a/_posts/2024-12-22-Terminal.md
+++ b/_posts/2024-12-22-Terminal.md
@@ -66,13 +66,13 @@ $ cat ~/.config/terminator/config
     [[[terminal6]]]
       order = 0
       parent = child5
-      profile = htop
+      profile = default
       type = Terminal
       uuid = 5ca25170-d241-4993-a018-c004abbdd15b
     [[[terminal7]]]
       order = 1
       parent = child5
-      profile = nvidia-smi
+      profile = default
       type = Terminal
       uuid = 1e48a43f-93a4-46c0-b29e-4094c045673a
   [[New Layout]]
@@ -120,13 +120,13 @@ $ cat ~/.config/terminator/config
     [[[terminal6]]]
       order = 0
       parent = child5
-      profile = htop
+      profile = default
       type = Terminal
       uuid = 5ca25170-d241-4993-a018-c004abbdd15b
     [[[terminal7]]]
       order = 1
       parent = child5
-      profile = nvidia-smi
+      profile = default
       type = Terminal
       uuid = 1e48a43f-93a4-46c0-b29e-4094c045673a
 [plugins]
