--- a/_posts/2024-12-17-Linux-BBB.md
+++ b/_posts/2024-12-17-Linux-BBB.md
@@ -11,7 +11,7 @@ Description: How to get started with BBB and load image into board, set up cross
 
 ---
 Firstly, most BBB have a built-in 4GB SD card known as a eMMC. When the boards are made, the eMMC is “flashed” with some version of the BeagleBone OS that is usually outdated. So the blog mainly guide about how to burn image via your external micro SDcard (with 4GB minium).
-<h3><strong>Install prebuilt image</strong></h3>
+<h3 id="Install prebuilt image" style="font-weight: bold;">Install prebuilt image</h3>
 From your linux machine, install pre-built image for BBB, kernel version 4.14.108
 ``` 
 host$ wget https://files.beagle.cc/file/beagleboard-public-2021/images/bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img.xz
@@ -30,7 +30,7 @@ Hola, it's almost done. Now you can insert that sdcard into your board then inse
 > When booting, you have to press and hold the boot button(S2) before you power the board then release the S2 button after 2 to 5 seconds. For further informations, you should take a look at this docs.  
 > url: https://software-dl.ti.com/processor-sdk-linux/esd/docs/latest/linux/How_to_Guides/Target/How_to_Program_Beaglebone_Black_eMMC_via_SD_Card.html
 {: .prompt-warning }
-<h3><strong>Cross-compile set up</strong></h3>
+<h3 id="Cross-compile set up" style="font-weight: bold;">Cross-compile set up</h3>
 Now, we will set up the Host machine in order to cross-compile the BBB
 First, let's install the packages that need to build Linux kernel.
 ```
