--- a/_posts/2024-12-22-Terminal.md
+++ b/_posts/2024-12-22-Terminal.md
@@ -8,12 +8,12 @@ tags: [linux]
 ---
 The terminator is a powerful and feature-rich terminal emulator for Linux, designed to optimize workflows by allowing users to manage multiple terminal sessions efficiently. It is especially favored by developers, system administrators, and power users who need to work with several terminal windows simultaneously.
 
-<h3><strong>Installation</strong></h3>
+<h3 id="Installation" style="font-weight: bold;">Installation</h3>
 We can install it simply with one line of command
 ```
 sudo apt install terminator
 ```
-<h3><strong>Layout</strong></h3>
+<h3 id="Layout" style="font-weight: bold;">Layout</h3>
 All the configurations will be stored in <span style="color:red">~/.config/terminator/config</span> file. You can import my conf to your configurations. 
 ```shell
 $ cat ~/.config/terminator/config
