--- a/_posts/2024-12-28-MCU-Pico.md
+++ b/_posts/2024-12-28-MCU-Pico.md
@@ -9,7 +9,8 @@ tags: [mcu]
 The aim of this series is to provide easy knowledge that anyone can dive into. In this series, i will give examples in programming Pico MCU in C/C++ lang. This post helps you to set up the SDK toolchain to use VScode for C/C++ development.  
 ![Desktop View](/assets/img/2024-12-28-MCU-Pico/pico.jpg){: .center }
 
-<h3><strong>Raspberry Pi Pico</strong></h3>
+
+<h3 id="raspberry-pi-pico" style="font-weight: bold;">raspberry-pi-pico</h3>
 Raspberry Pi Pico is a low-cost, high-performance microcontroller board with flexible digital interfaces. Some keys features include:
 - RP2040 microcontroller chip designed by Raspberry Pi in the UK
 - Dual-core Arm Cortex M0+ processor, flexible clock running up to 133Mhz
@@ -17,20 +18,25 @@ Raspberry Pi Pico is a low-cost, high-performance microcontroller board with fle
 - USB 1.1 with device and host support
 - Accelerated floating-point libraries on-chip
 - Drag-and-drop programming using mass storage over USB
-<h3><strong>C/C++ SDK programming</strong></h3>
+
+<h3 id="C/C++ SDK programming" style="font-weight: bold;">C/C++ SDK programming</h3>
 The SDk is the most conservative way of programming the RP2040-based microcontrollers. Embedded-C prog gives you highest level of control over your embedded software behavior and performance. 
-<h3><strong>RP2040 Hardware Architecture</strong></h3>
+<h3 id="RP2040 Hardware Architecture" style="font-weight: bold;">RP2040 Hardware Architecture</h3>
+
 The RP2040 microcontrollers, like most others, has internal RAM, flash, IOs, Peripherals, and DMA. with a dual-core ARM Cortex-M0+ processors. 
 ![Desktop View](/assets/img/2024-12-28-MCU-Pico/hardware-arch.png){: .normal }
-<h3><strong>SDK overview</strong></h3>
+
+<h3 id="SDK overview" style="font-weight: bold;">SDK overview</h3>
 The C/C++ SDK consists of multuple low-level device drivers and hardware abstraction drivers which're built on top of the low-levels drivers.  
 The SDK is designed to provide an API and programming environment that is familiar both to non-embedded C developers and embedded C developers alike. A single program runs on the device at a time with a conventional main() method. Standard C/C++ libraries are supported along with APIs for accessing the RP-series microcontroller’s hardware, including DMA, IRQs, and the wide variety fixed function peripherals and PIO (Programmable IO).  
 The SDK can be used to build anything from simple applications, fully-fledged runtime environments such as MicroPython, to low level software such as the RP-series microcontroller’s on-chip bootrom itself.  
 The design goal for entire SDK is to be simple but powerful!
-<h3><strong>Build systems</strong></h3>
+
+<h3 id="Build systems" style="font-weight: bold;">Build systems</h3>
 Cuz there's no IDE for developing embed-C projects based on RP2040 microcontrollers. That means we'll have to install some tools which create a environment for building apps like CMake, compiler flags, build tools,...  
 And the Pico's SDK uses CMake to manage project builds. Each project will have a file called <span style="color:red">CMakeLists.txt</span>, which specifies the header files, source files and any other configurations for the build process that the project need.
-<h3><strong>Installing Pi Pico SDK Toolchain</strong></h3>
+
+<h3 id="Installing Pi Pico SDK Toolchain" style="font-weight: bold;">Installing Pi Pico SDK Toolchain</h3>
 Now, we need to install the toolchain to start developing our first project. My settings based on Ubuntu 22.04.  
 Make sure you have installed build-essential package in your system.
 ```shell
@@ -67,7 +73,8 @@ To make changes to take effect, logout and login to your system or run the follo
 ```
 source /etc/profile.d/pico-sdk.sh
 ```
-<h3><strong>Build program</strong></h3>
+<h3 id="Build program" style="font-weight: bold;">Build program</h3>
+
 Create a new directory to store project files and navigate to this directory:
 ```
 mkdir helloworld 
@@ -137,7 +144,7 @@ CMakeCache.txt  cmake_install.cmake  generated  main.bin  main.elf      main.hex
 CMakeFiles      elf2uf2              Makefile   main.dis  main.elf.map  main.uf2
 ```
 The <span style="color:red">main.uf2</span> is a prog which you should move into storage of the Raspberry Pi Pico.
-<h3><strong>Upload firmware</strong></h3>
+<h3 id="Upload firmware" style="font-weight: bold;">Upload firmware</h3>
 Hold down the BOOTSEL button and connect the Raspberry Pi Pico to your PC via micro USB cable. Once Pico is connected, release the BOOTSEL button. This button puts Raspberry Pi Pico into USB mass storage device mode.  
 Find the USB mass storage device called RPI-RP2:
 ```shell
@@ -168,7 +175,7 @@ sudo sync
 Now the MCU will disconnect and runs the code.
 > If you want to upload new code to the Raspberry Pi Pico, disconnect it from power and hold down the BOOTSEL button when connecting Pico to power.
 {: .prompt-warning }
-<h3><strong>Test program</strong></h3>
+<h3 id="Test program" style="font-weight: bold;">Test program</h3>
 Program prints message to USB CDC. So, you can open the serial port to see messages:
 ```
 sudo screen /dev/ttyACM0 115200
