--- a/_posts/2024-12-29-MCU-Pico1.md
+++ b/_posts/2024-12-29-MCU-Pico1.md
@@ -7,10 +7,10 @@ tags: [mcu]
 
 ---
 In this post, we'll discuss about GPIO functions using C/C++ SDK. And i also create a demo project to experiment with the Pico I/O operations. This tutorial is compatible with the Rasperry Pi Pico W board and any RP2040-based boards as well.
-<h3><strong>GPIOs map</strong></h3>
+<h3 id="GPIOs map" style="font-weight: bold;">GPIOs map</h3>
 The GPIO (General-Purpose Input Output) Pins are the digital IO pins of the Raspberry Pi Pico boards. There are 26 GPIO pins on the Raspberry Pi Pico board below
 ![Desktop View](/assets/img/2024-12-29-MCU-Pico1/pinout.jpg){: .center }
-<h3><strong>Pin Voltage</strong></h3>
+<h3 id="Pin Voltage" style="font-weight: bold;">Pin Voltage</h3>
 In output mode, the digital pin voltage is:
 - 3.3v (when the digital pin is set HIGH)
 - 0v (when the digital pin is set to LOW)  
@@ -18,13 +18,13 @@ In input mode, the digital input pin will read bit 0 or 1 depending on the volta
 - 0v–0.8v: read as 0 (logic 0 or LOW)
 - 2v–3.3v: read as 1 (logic 1 or HIGH)  
 So, any voltage between 0.8v-2v is considered as undefined input voltage level for the digital IO pins. 
-<h3><strong>Special Function GPIO Pins (Non-Usable)</strong></h3>
+<h3 id="Special Function GPIO Pins (Non-Usable)" style="font-weight: bold;">Special Function GPIO Pins (Non-Usable)</h3>
 There are 4 GPIO pins that are not “Freely” usable on the Raspberry Pi Pico board. They are not exposed because they’re used to control some features on the Pi Pico board itself. Those pins are as follows:
 - GPIO23: Controls the onboard SMPS power save enable pin
 - GPIO24: VBUS Sense; HIGH if VBUS is present, Else LOW
 - GPIO25: Connected to the onboard LED
 - GPIO29: Used by The ADC to measure the VSYS
-<h3><strong>Raspberry Pi Pico C/C++ SDK GPIO Functions</strong></h3>
+<h3 id="Raspberry Pi Pico C/C++ SDK GPIO Functions" style="font-weight: bold;">Raspberry Pi Pico C/C++ SDK GPIO Functions</h3>
 In SDK folder, you can check all the APIs about GPIOs. Those functions are used for initializing and controlling the IO pins. Below are some basic functions to control IOs, which you can got in /hardware_gpio/include/hardware/gpio
 - gpio_init(uint gpio)  
     Initialise a GPIO for (enabled I/O and set func to GPIO_FUNC_SIO).  
@@ -36,7 +36,7 @@ In SDK folder, you can check all the APIs about GPIOs. Those functions are used 
     Get a specific GPIO direction  
 - gpio_put(uint gpio, bool value)  
     Drive a single GPIO high/low  
-<h3><strong>Digital Output Operations</strong></h3>
+<h3 id="Digital Output Operations" style="font-weight: bold;">Digital Output Operations</h3>
 The below code perform how to write output pin with the SDK. In the following example code, GPIO pin number 2(known as built_in LED on rasPico board) as an output pin will toggle every 100ms after initilizing.
 ```shell
 #include "pico/stdlib.h"
@@ -55,7 +55,7 @@ int main()
     }
 }
 ```
-<h3><strong>Read Input State</strong></h3>
+<h3 id="Read Input State" style="font-weight: bold;">Read Input State</h3>
 This is how perform a digital input pin. It will control the output of Pin 5 via the state reading from Pin 6
 ```shell
 int main(){
@@ -73,8 +73,8 @@ int main(){
     }
 }
 ```
-<h3><strong>LED and Button example</strong></h3>
-<h4><strong>Step #1</strong></h4>
+<h3 id="LED and Button example" style="font-weight: bold;">LED and Button example</h3>
+<h4 id="Step #1" style="font-weight: bold;">Step #1</h4>
 ```shell
 mkdir LED_BUTTON
 cd LED_BUTTON
@@ -102,7 +102,7 @@ int main()
     }
 }
 ```
-<h4><strong>Step #2</strong></h4>
+<h4 id="Step #2" style="font-weight: bold;">Step #2</h4>
 Create a CMakeLists.txt file to the project's folder.
 ```
 vi CMakeLists.txt
@@ -129,6 +129,7 @@ target_link_libraries(${PROJECT_NAME} pico_stdlib)
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
 pico_enable_stdio_uart(${PROJECT_NAME} 0)
 ```
+   
 After that, you can do the same as the first blog abt Pico i've post. It's all done.  
-<h3><strong>Simulation with Wokwi</strong></h3>
+<h3 id="Simulation with Wokwi" style="font-weight: bold;">Simulation with Wokwi</h3>
 If you dont have hardware kit, you can simulate the result with Wokwi projects. Which is very helpful when you're just getting started. In another post, i'll show you guys how to use it in details :>
