--- a/_posts/2025-1-1-MCU-Pico2.md
+++ b/_posts/2025-1-1-MCU-Pico2.md
@@ -7,13 +7,14 @@ tags: [mcu]
 
 ---
 One of Pico's key features is the ability to communicate with others devices via UART. In this post, i will covering the concepts, pinout, guide with sample code about UART.
-<h3><strong>Serial Communication</strong></h3>
+<h3 id="Serial Communication" style="font-weight: bold;">Serial Communication</h3>
 Serial communication, oftern reffered to as UART comm, is a method of transmitting and receiving data between two devices. The 'serial' means that this protocol sends data one by one consequently over a single wire. It uses two wires for communication: one for transmit (TX) and other for receiving (RX). That makes this protocol so simple and efficient way to communicate between two devices.
-<h3><strong>Pico's UART</strong></h3>
+<h3 id="Pico's UART" style="font-weight: bold;">Pico's UART</h3>
 The Raspberry Pi Pico (RP2040) microcontroller has 2x UARTs mmodules for serial communication: UART0 and UART1. And the UART pins can remappable (which means you can assign it to different GPIO of the MCU). However, the default uart0 pins is GPIO0(TX) and GPIO1(RX).  
 However, this MCU also have a native hardware USB modules (CDC class) to act as a serial port and could be viewed by any PC as a Virtual COM port. So we dont need to use a USB-TTL converter (which is less convenient to communicate with a PC). 
-<h3><strong>Serial Print</strong></h3>
-<h4><strong>Enable USB CDC</strong></h4>
+
+<h3 id="Serial Print" style="font-weight: bold;">Serial Print</h3>
+<h4 id="Enable USB CDC" style="font-weight: bold;">Enable USB CDC</h4>
 To enable serial print, you need to add the below code into the CMakeLists.txt file:
 ```
 pico_enable_stdio_usb(main 1)
@@ -34,7 +35,7 @@ int main()
     }
 }
 ```
-<h3><strong>Examples</strong></h3>
+<h3 id="Examples" style="font-weight: bold;">Examples</h3>
 We'll set a IO pin as an output to a LED (the built-in LED GPIO2). And we'll enable stdio operations over USB CDC. Then a message will be printed to the user with the bit 0 or 1 to express the output LED status (OFF/ON).  
 ```
 #include <stdio.h>
