--- a/_posts/2024-12-17-Linux-BBB.md
+++ b/_posts/2024-12-17-Linux-BBB.md
@@ -3,6 +3,7 @@ title: Getting started with Black Beagle Bone
 date: 2024-12-16 14:30:00 +0700;
 #categories: [Abt-me, introduce]
 tags: [linux, BBB]     
+comments: true
 ---
 
 ---
