--- a/_posts/2024-12-17-Hallo.md
+++ b/_posts/2024-12-17-Hallo.md
@@ -6,7 +6,7 @@ tags: [sharing]
 ---
 
 ---
-Total blog test_vssssssiews: {{ site.posts | size }}    
+Total blogs views: {{ site.posts | size }}    
 
 <ul class="tag-list">
   {% assign tags = site.tags %}
