--- a/_posts/2025-20-5-CH32V003-01.md
+++ b/_posts/2025-20-5-CH32V003-01.md
@@ -9,6 +9,7 @@ comments: true
 ---
 The CH32V003F4P6, developed by Qinheng (WCH), is a low-cost, compact 32-bit RISC-V MCU ideal for hobbyists, students, and embedded developers exploring the RISC-V architecture. Despite its affordability, the chip offers impressive features such as 2KB SRAM, 16KB flash, multiple timers, UART, I²C, and SPI.  
 However, developing for the CH32V series comes with a caveat: it uses a custom RISC-V toolchain and OpenOCD fork provided by WCH, meaning mainline GCC and OpenOCD do not support it out of the box. This blog walks you through building and flashing firmware for the CH32V003 in a Linux environment, without relying on the proprietary MountRiver IDE.
+
 ---
 <h3 id="Hardware preparation" style="font-weight: bold;">Hardware preparation</h3>
 - Qinheng CH32V003F4P6 development board
@@ -36,4 +37,19 @@ host$ make
 host$ make flash
 host$ make erase
 host$ make reset
+```
+<h3 id="Compilation Params" style="font-weight: bold;">Compilation Params</h3>
+The basic parameters of CH32V003 compilation are as follows, note that march and mabi, and CH32V103 are not the same, they are not run after compiling and writing with CH32V103 parameters, which are extracted from the compilation commands actually executed in MRS
+```shell
+CCFLAGS := -march=rv32ec \
+           -mabi=ilp32e \
+           -msmall-data-limit=0 \
+           -msave-restore \
+           -Os \
+           -fmessage-length=0 \
+           -fsigned-char \
+           -ffunction-sections \
+           -fdata-sections \
+		   -fno-common \
+           -Wunused -Wuninitialized -g
 ```
