_remove dupplicate tag

--- a/_posts/2025-20-5-CH32V003-01.md
+++ b/_posts/2025-20-5-CH32V003-01.md
@@ -2,7 +2,7 @@
 title: Build CH32V003 chip in Linux environment
 date: 2025-5-20 14:30:00 +0700;
 #categories: [Abt-me, introduce]
-tags: [linux,risc-v]     
+tags: [linux,riscv]     
 comments: true
 ---
 
