--- a/_posts/2025-28-5-MCU-DP2.md
+++ b/_posts/2025-28-5-MCU-DP2.md
@@ -1,7 +1,7 @@
 ---
 title: Design Patterns in Embedded Systems 2
 date: 2025-05-28 10:20:50 +0700
-tags: [mcu, sharing, design-pattern, embedded-systems]
+tags: [mcu, sharing]
 comments: false
 ---
 
