--- a/_posts/2025-6-15-PCAN.md
+++ b/_posts/2025-6-15-PCAN.md
@@ -1,5 +1,5 @@
 ---
-title: "PCAN (PEAK CAN) Installation and Usage on Linux"
+title: "PCAN (PEAK CAN) Installation and Usage"
 date: 2025-6-15 10:45:00 +0700
 tags: [can, linux]
 ---
