_add new posts abt git

--- a/_posts/2024-12-17-Hallo.md
+++ b/_posts/2024-12-17-Hallo.md
@@ -6,13 +6,13 @@ tags: [sharing]
 ---
 
 ---
-Total blogs views: {{ site.posts | size }}    
+Total blogs posts: {{ site.posts | size }}    
 
 <ul class="tag-list">
   {% assign tags = site.tags %}
   {% for tag in tags %}
     <li>
-      Tags {{ tag[0] }}: {{ tag[1].size }} total reads.
+      Tags {{ tag[0] }}: {{ tag[1].size }} total posts.
     </li>
   {% endfor %}
 </ul>
