--- a/_posts/2024-12-22-Terminal.md
+++ b/_posts/2024-12-22-Terminal.md
@@ -1,7 +1,7 @@
 ---
 title: Linux terminal emulator
 date: 2024-12-22 8:30:00 +0700;
-#categories: [Abt-me, introduce]
+categories: [Linux]
 tags: [linux]     
 ---
 
