--- a/_posts/2025-1-1-MCU-Pico2.md
+++ b/_posts/2025-1-1-MCU-Pico2.md
@@ -1,7 +1,7 @@
 ---
 title: Raspberry Pi Pico UART protocol via serial USB
 date: 2025-1-1 8:30:00 +0700;
-#categories: [Abt-me, introduce]
+categories: [Embedded Systems]
 tags: [mcu]    
 ---
 
