--- a/_posts/2025-5-27-MCU-DP1.md
+++ b/_posts/2025-5-27-MCU-DP1.md
@@ -1,6 +1,7 @@
 ---
 title: Design Patterns in Embedded Systems 1
 date: 2025-05-27 10:20:50 +0700
+categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
 comments: false
 ---
