--- a/_posts/2025-6-15-PCAN.md
+++ b/_posts/2025-6-15-PCAN.md
@@ -1,6 +1,7 @@
 ---
 title: "PCAN (PEAK CAN) Installation and Usage"
 date: 2025-06-15 10:45:00 +0700
+categories: [Hardware Projects]
 tags: [can, linux]
 ---
 
