--- a/_posts/2025-3-1-RiscV.md
+++ b/_posts/2025-3-1-RiscV.md
@@ -1,7 +1,7 @@
 ---
 title: Introduction to RISCV
 date: 2025-3-1 14:30:00 +0700;
-#categories: [Abt-me, introduce]
+categories: [Hardware Projects, Architect]
 tags: [riscv, mcu]     
 ---
 
