--- a/_posts/2025-5-28-MCU-DP2.md
+++ b/_posts/2025-5-28-MCU-DP2.md
@@ -1,6 +1,7 @@
 ---
 title: Design Patterns in Embedded Systems 2
 date: 2025-05-28 10:20:50 +0700
+categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
 comments: false
 ---
