--- a/_posts/2025-5-29-MCU-DP3.md
+++ b/_posts/2025-5-29-MCU-DP3.md
@@ -1,6 +1,7 @@
 ---
 title: Design Patterns in Embedded Systems 3
 date: 2025-05-29 10:20:50 +0700
+categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
 comments: false
 ---
