--- a/_posts/2025-7-14-Timing.md
+++ b/_posts/2025-7-14-Timing.md
@@ -1,6 +1,7 @@
 ---
 title: Timing and Profiling Techniques on STM32 Microcontrollers
 date: 2025-07-14 06:20:52 +0000
+categories: [Embedded Systems]
 tags: [mcu, CortexM, ARM]
 ---
 
