--- a/_posts/2024-12-16-Linux-BBB.md
+++ b/_posts/2024-12-16-Linux-BBB.md
@@ -1,7 +1,7 @@
 ---
 title: Getting started with Black Beagle Bone
 date: 2024-12-16 14:30:00 +0700;
-categories: [Hardware Projects]
+categories: [Hardware Projects, BeagleBone]
 tags: [linux, BBB]     
 comments: true
 ---
