--- a/_posts/2025-5-27-MCU-DP1.md
+++ b/_posts/2025-5-27-MCU-DP1.md
@@ -1,5 +1,5 @@
 ---
-title: Design Patterns in Embedded Systems 1
+title: Design Patterns in Embedded Systems
 date: 2025-05-27 10:20:50 +0700
 categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
