--- a/_posts/2025-5-30-MCU-DP4.md
+++ b/_posts/2025-5-30-MCU-DP4.md
@@ -1,5 +1,5 @@
 ---
-title: Design Patterns in Embedded Systems 4
+title: Design Patterns in Embedded Systems - Behavioral Concurrency Patterns
 date: 2025-05-30 10:20:50 +0700
 categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
