--- a/_posts/2025-5-29-MCU-DP3.md
+++ b/_posts/2025-5-29-MCU-DP3.md
@@ -1,5 +1,5 @@
 ---
-title: Design Patterns in Embedded Systems 3
+title: Design Patterns in Embedded Systems - Structural Patterns 
 date: 2025-05-29 10:20:50 +0700
 categories: [Embedded Systems, Design Pattern]
 tags: [mcu, sharing]
