--- a/_posts/2024-12-20-Cmake0.md
+++ b/_posts/2024-12-20-Cmake0.md
@@ -1,7 +1,7 @@
 ---
 title: CMake 
 date: 2024-12-20 8:30:00 +0700;
-categories: [Development Tools]
+categories: [Development Tools, CMake]
 tags: [build-system]     # TAG names should always be lowercase
 ---
 
