--- a/_posts/2024-12-21-Cmake1.md
+++ b/_posts/2024-12-21-Cmake1.md
@@ -1,7 +1,7 @@
 ---
 title: CMake Advanced Features
 date: 2024-12-21 8:30:00 +0700
-categories: [Development Tools]
+categories: [Development Tools, CMake]
 tags: [build-system, cmake]
 ---
 
