--- a/_posts/2025-8-2-MCU-Pico4.md
+++ b/_posts/2025-8-2-MCU-Pico4.md
@@ -1,7 +1,7 @@
 ---
 title: Raspberry Pi Pico 2 - Deep Dive into RISC-V Development 
 date: 2025-8-2 8:30:00 +0700
-categories: [Embedded Systems, Hardware Projects]
+categories: [Embedded Systems]
 tags: [mcu, riscv]
 comments: false
 ---
