--- a/_posts/2024-12-28-MCU-Pico.md
+++ b/_posts/2024-12-28-MCU-Pico.md
@@ -1,7 +1,7 @@
 ---
 title: Raspberry Pi Pico 
 date: 2024-12-29 8:30:00 +0700;
-categories: [Embedded Systems]
+categories: [Embedded Systems, Pico]
 tags: [mcu]    
 ---
 
