--- a/_posts/2024-12-29-MCU-Pico1.md
+++ b/_posts/2024-12-29-MCU-Pico1.md
@@ -1,7 +1,7 @@
 ---
 title: Raspberry Pi Pico Read Digital Input & Write Digital Output (C/C++ SDK)
 date: 2024-12-29 8:30:00 +0700;
-categories: [Embedded Systems]
+categories: [Embedded Systems, Pico]
 tags: [mcu]    
 ---
 
