--- a/_posts/2025-8-1-MCU-Pico3.md
+++ b/_posts/2025-8-1-MCU-Pico3.md
@@ -1,7 +1,7 @@
 ---
 title: Raspberry Pi Pico 2 - RISC-V cores
 date: 2025-8-1 8:30:00 +0700
-categories: [Embedded Systems]
+categories: [Embedded Systems, Pico]
 tags: [mcu, riscv]
 comments: false
 ---
